--- a/wlansensor/platformio.ini
+++ b/wlansensor/platformio.ini
@@ -8,7 +8,7 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [env:esp12e]
-platform = espressif8266_stage
+platform = espressif8266_stage@2d86ec1
 framework = arduino
 board = esp12e
 #[env:specific_ld_script]
