--- a/wlansensor/platformio.ini
+++ b/wlansensor/platformio.ini
@@ -8,10 +8,13 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [env:esp12e]
-platform = espressif8266_stage@2d86ec1
+platform = espressif8266
 framework = arduino
 board = esp12e
+
 #[env:specific_ld_script]
 #build_flags = -Wl,-T/home/rk/.platformio/platforms/espressif8266/ldscripts/esp8266.flash.4m.ld
-build_flags = -Wl,-T/home/rk/.platformio/packages/framework-arduinoespressif8266/tools/sdk/ld/eagle.flash.4m.ld
-board_flash_mode = qio
+#build_flags = -T /home/rk/.platformio/packages/framework-arduinoespressif8266/tools/sdk/ld/eagle.flash.4m1m.ld
+
+build_flags = -Wl,-Teagle.flash.4m3m.ld
+board_build.flash_mode = qio
